<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A9F"
    tools:context=".BmiCalTab">

    <!-- 뒤로가기 버튼 -->
    <Button
        android:id="@+id/button16"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:backgroundTint="#A9F"
        android:foreground="@drawable/backbutton"
        android:text="뒤로가기"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03" />

    <!-- 성별 텍스트 -->
    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="성별"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- 남성 버튼 -->
    <Button
        android:id="@+id/male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:backgroundTint="@color/white"
        android:paddingLeft="50dp"
        android:paddingTop="10dp"
        android:paddingRight="50dp"
        android:paddingBottom="10dp"
        android:text="남성"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:cornerRadius="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/female"
        app:layout_constraintTop_toBottomOf="@+id/gender" />

    <!-- 여성 버튼 -->
    <Button
        android:id="@+id/female"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:backgroundTint="@color/white"
        android:paddingLeft="40dp"
        android:paddingTop="10dp"
        android:paddingRight="40dp"
        android:paddingBottom="10dp"
        android:text="여성"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:cornerRadius="30dp"
        app:layout_constraintLeft_toRightOf="@id/male"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender" />

    <!-- 키 텍스트 -->
    <TextView
        android:id="@+id/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="키(cm)"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/male" />

    <!-- 키 입력 에디트 텍스트 -->
    <EditText
        android:id="@+id/slider1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/height"
        app:layout_constraintTop_toBottomOf="@id/height"
        app:layout_constraintBottom_toTopOf="@id/weight"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/black" />

    <!-- 체중 텍스트 -->
    <TextView
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="체중(KG)"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/slider1" />

    <!-- 체중 입력 에디트 텍스트 -->
    <EditText
        android:id="@+id/slider2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/weight"
        app:layout_constraintTop_toBottomOf="@id/weight"
        app:layout_constraintBottom_toTopOf="@id/floatingActionButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/black" />

    <!-- 계산 버튼 -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="#FFFFFF"
        android:clickable="true"
        android:elevation="30dp"
        android:focusable="true"
        android:scaleType="center"
        app:fabCustomSize="80dp"
        app:hoveredFocusedTranslationZ="4dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/slider2"
        app:maxImageSize="40dp"
        app:srcCompat="@drawable/ic_baseline_arrow_right_alt_24"
        app:tint="#EF3B36"
        app:useCompatPadding="true"
        android:contentDescription="TODO" />

    <!-- BMI 결과를 보여주는 카드뷰 -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/white"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/floatingActionButton">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <!-- BMI 결과 텍스트 -->
            <TextView
                android:id="@+id/bmitext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="30dp"
                android:text="@string/determine"
                android:textAlignment="center"
                android:textColor="#474747"
                android:textSize="16sp"
                android:textStyle="normal" />

            <!-- 사용자 BMI 텍스트 -->
            <TextView
                android:id="@+id/yourBmi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="30dp"
                android:padding="5dp"
                android:text="@string/your_bmi"
                android:textAlignment="center"
                android:textColor="#434343"
                android:textSize="24sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <!-- 결과 텍스트 -->
            <TextView
                android:id="@+id/Result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/yourBmi"
                android:layout_marginStart="45dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:padding="5dp"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="35sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <!-- 피드백 텍스트 -->
            <TextView
                android:id="@+id/Feedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Result"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:padding="5dp"
                android:text="@string/normal_weight"
                android:textAlignment="center"
                android:textColor="#5DFF24"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="gone" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
